--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body{
 .container{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
-
+    background: linear-gradient(hsl(154deg 77% 60%), hsl(246deg 98% 69%));
     display: flex;
     align-items: center;
     justify-content: center;
